# docs/swagger.json
@@ -1474,32 +1474,29 @@
                 "accuracy": {
                     "type": "number"
                 },
-                "activity": {
+                "activity_type": {
                     "type": "string"
                 },
                 "altitude": {
                     "type": "number"
                 },
-                "battery": {
+                "battery_percentage": {
                     "type": "integer"
                 },
                 "bearing": {
                     "type": "number"
                 },
-                "charging": {
+                "is_charging": {
                     "type": "boolean"
                 },
-                "gps_provider": {
-                    "type": "string"
+                "is_mock": {
+                    "type": "boolean"
                 },
                 "latitude": {
                     "type": "number"
                 },
                 "longitude": {
                     "type": "number"
-                },
-                "mock_location": {
-                    "type": "boolean"
                 },
                 "speed": {
                     "type": "number"
@@ -1522,23 +1519,23 @@
                 "accuracy": {
                     "type": "number"
                 },
-                "activity": {
+                "activity_type": {
                     "type": "string"
                 },
                 "altitude": {
                     "type": "number"
                 },
-                "battery": {
+                "battery_percentage": {
                     "type": "integer"
                 },
                 "bearing": {
                     "type": "number"
                 },
-                "charging": {
+                "is_charging": {
                     "type": "boolean"
                 },
-                "gps_provider": {
-                    "type": "string"
+                "is_mock": {
+                    "type": "boolean"
                 },
                 "latitude": {
                     "type": "number"
@@ -1546,11 +1543,11 @@
                 "longitude": {
                     "type": "number"
                 },
-                "mock_location": {
-                    "type": "boolean"
-                },
                 "speed": {
                     "type": "number"
+                },
+                "timestamp": {
+                    "type": "string"
                 }
             }
         },
